2019 XXX XX Sergey Satskiy <sergey.satskiy@tuta.io>

* Version 4.6.1
* Adding pylint plugin
* Plugin manager bug fixes and minor improvements
* Graphics pane icon scaling in a uniform way
* Slight changes for the graphics primitives with icons

2019 Oct 30 Sergey Satskiy <sergey.satskiy@tuta.io>

* Version 4.6.0
* Bug fix: allow grouping for the try-except blocks
* Bug fix: exception when selecting doc links
* CML doc support
* Embedded documentation significant update
* Bumping up the jedi library version to 0.15.1
* Bumping up the plantUML binary version to 1.2019.11

2019 Aug 05 Sergey Satskiy <sergey.satskiy@tuta.io>

* Version 4.5.2
* Bug fix: Exception when switching smart zoom level

2019 Jul 31 Sergey Satskiy <sergey.satskiy@tuta.io>

* Version 4.5.1
* PlantUML diagram support for markdown
* Self protection against invalid custom terminal command line
* Bumping up the cdmcfparser version to 2.2.1
* Bumping up the cdmpyparser version to 3.1.1
* Bumping up the jedi library version to 0.14.1

2019 Apr 25 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.5.0
* Python 3.7 support
* New feature: support a floating independent window with flowchart renderer
* More on embedded documentation
* Bumping up the cdmcfparser version to 2.2.0
* Bumping up the cdmpyparser version to 3.1.0

2019 Mar 21 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.4.0
* Bumping up the magic library version to 0.4.15
* Introducing basic markdown rendering support
* Bug fix: proper file position is saved when an individual tab is closed
* Improved file type detection for some file types
* Bug fix: incorrect inital margin size when a new tab button is clicked
* Bumping up the jedi library version to 0.13.1
* Bumping up the radon library version to 2.4.0
* Fixing the flake8 version to 3.6.0
* Support embedded IDE documentation in Markdown
* Bug fix: running project profile instead of debug
* Bug fix: incorrect project file encoding detection if a file did not have an