@@ -24,13 +24,12 @@ import os.path
 from utils.pixmapcache import getIcon
 from utils.config import CONFIG_DIR
 from utils.skin import getSkinsList
-from utils.colorfont import (getMonospaceFontList, getScalableFontList,
-                             getProportionalFontList)
 from utils.globals import GlobalData
 from utils.misc import getIDETemplateFile, getProjectTemplateFile
 from utils.settings import CLEAR_AND_REUSE, NO_CLEAR_AND_REUSE, NO_REUSE
 from utils.diskvaluesrelay import getRecentFiles
-from .qt import QDir, QApplication, QMenu, QStyleFactory, QActionGroup
+from .qt import (QDir, QApplication, QMenu, QStyleFactory, QActionGroup,
+                 QFontDialog)
 from .mainwindowtabwidgetbase import MainWindowTabWidgetBase
 
 
@@ -596,58 +595,15 @@ class MainWindowMenuMixin:
         styleMenu.triggered.connect(self._onStyle)
         styleMenu.aboutToShow.connect(self.__styleAboutToShow)
 
-        textFontFamilyMenu = optionsMenu.addMenu("Text mono font family")
-        self.__textFontFamilyGroup = QActionGroup(self)
-        self.__textFonts = []
-        for fontFamily in sorted(getMonospaceFontList()):
-            fontFamilyAct = textFontFamilyMenu.addAction(fontFamily)
-            fontFamilyAct.setData(fontFamily)
-            fontFamilyAct.setCheckable(True)
-            fontFamilyAct.setActionGroup(self.__textFontFamilyGroup)
-            self.__textFonts.append((fontFamily, fontFamilyAct))
-        textFontFamilyMenu.triggered.connect(self._onMonoFont)
-        textFontFamilyMenu.aboutToShow.connect(self.__fontAboutToShow)
-
-        marginFontFamilyMenu = optionsMenu.addMenu("Editor margin font family")
-        self.__marginFontFamilyGroup = QActionGroup(self)
-        self.__marginFonts = []
-        fonts = set(getMonospaceFontList() + getScalableFontList() +
-                    getProportionalFontList())
-        for fontFamily in sorted(list(fonts)):
-            fontFamilyAct = marginFontFamilyMenu.addAction(fontFamily)
-            fontFamilyAct.setData(fontFamily)
-            fontFamilyAct.setCheckable(True)
-            fontFamilyAct.setActionGroup(self.__marginFontFamilyGroup)
-            self.__marginFonts.append((fontFamily, fontFamilyAct))
-        marginFontFamilyMenu.triggered.connect(self._onMarginFont)
-        marginFontFamilyMenu.aboutToShow.connect(self.__marginFontAboutToShow)
-
-        flowFontFamilyMenu = optionsMenu.addMenu("Flow mono font family")
-        self.__flowFontFamilyGroup = QActionGroup(self)
-        self.__flowFonts = []
-        for fontFamily in getMonospaceFontList():
-            fontFamilyAct = flowFontFamilyMenu.addAction(fontFamily)
-            fontFamilyAct.setData(fontFamily)
-            fontFamilyAct.setCheckable(True)
-            fontFamilyAct.setActionGroup(self.__flowFontFamilyGroup)
-            self.__flowFonts.append((fontFamily, fontFamilyAct))
-        flowFontFamilyMenu.triggered.connect(self._onFlowMonoFont)
-        flowFontFamilyMenu.aboutToShow.connect(self.__flowFontAboutToShow)
-
-        badgeFontFamilyMenu = optionsMenu.addMenu("Flow badge font family")
-        self.__badgeFontFamilyGroup = QActionGroup(self)
-        self.__badgeFonts = []
-        fonts = set(getMonospaceFontList() + getScalableFontList() +
-                    getProportionalFontList())
-        for fontFamily in sorted(list(fonts)):
-            fontFamilyAct = badgeFontFamilyMenu.addAction(fontFamily)
-            fontFamilyAct.setData(fontFamily)
-            fontFamilyAct.setCheckable(True)
-            fontFamilyAct.setActionGroup(self.__badgeFontFamilyGroup)
-            self.__badgeFonts.append((fontFamily, fontFamilyAct))
-        badgeFontFamilyMenu.triggered.connect(self._onBadgeFont)
-        badgeFontFamilyMenu.aboutToShow.connect(self.__badgeFontAboutToShow)
-
+        fontIcon = getIcon('fontmenu.png')
+        optionsMenu.addAction(fontIcon, 'Text editor mono font...',
+                              self.__onEditorFont)
+        optionsMenu.addAction(fontIcon, 'Text editor margin font...',
+                              self.__onEditorMarginFont)
+        optionsMenu.addAction(fontIcon, 'Control flow mono font...',
+                              self.__onControlFlowFont)
+        optionsMenu.addAction(fontIcon, 'Control flow badge font...',
+                              self.__onControlFlowBadgeFont)
         return optionsMenu
 
     def __buildPluginsMenu(self, menuBar):
@@ -960,30 +916,6 @@ class MainWindowMenuMixin:
         for item in self.__styles:
             item[1].setChecked(item[0].lower() == currentStyle)
 
-    def __fontAboutToShow(self):
-        """Font menu is about to show"""
-        currentFont = GlobalData().skin['monoFont'].family().lower()
-        for item in self.__textFonts:
-            item[1].setChecked(item[0].lower() == currentFont)
-
-    def __flowFontAboutToShow(self):
-        """Flow font menu is about to show"""
-        currentFont = GlobalData().skin['cfMonoFont'].family().lower()
-        for item in self.__flowFonts:
-            item[1].setChecked(item[0].lower() == currentFont)
-
-    def __marginFontAboutToShow(self):
-        """Margin font menu is about to show"""
-        currentFont = GlobalData().skin['lineNumFont'].family().lower()
-        for item in self.__marginFonts:
-            item[1].setChecked(item[0].lower() == currentFont)
-
-    def __badgeFontAboutToShow(self):
-        """Flow badge font menu s about to show"""
-        currentFont = GlobalData().skin['badgeFont'].family().lower()
-        for item in self.__badgeFonts:
-            item[1].setChecked(item[0].lower() == currentFont)
-
     def __skinAboutToShow(self):
         """Skins menu is about to show"""
         currentSkin = self.settings['skin'].lower()
@@ -993,9 +925,8 @@ class MainWindowMenuMixin:
     @staticmethod
     def __buildSkinsList():
         """Builds a list of skins"""
-        localSkinsDir = os.path.normpath(str(QDir.homePath())) + \
-                        os.path.sep + CONFIG_DIR + os.path.sep + "skins" + \
-                        os.path.sep
+        items = [os.path.normpath(str(QDir.homePath())), CONFIG_DIR, "skins"]
+        localSkinsDir = os.path.sep.join(items) + os.path.sep
         return getSkinsList(localSkinsDir)
 
     def _recomposePluginMenu(self):
@@ -1053,3 +984,55 @@ class MainWindowMenuMixin:
     def _reuseIOConsoleChanged(self, act):
         """Triggered when a reuse I/O setting is changed"""
         self.settings['ioconsolereuse'] = act.data()
+
+    def __selectFont(self, scalable, nonScalable, mono, proportional,
+                     title, settingName):
+        """Returns the new font or None"""
+        dialog = QFontDialog(self)
+        dialog.setOption(QFontDialog.DontUseNativeDialog, True)
+        dialog.setOption(QFontDialog.ScalableFonts, scalable)
+        dialog.setOption(QFontDialog.NonScalableFonts, nonScalable)
+        dialog.setOption(QFontDialog.MonospacedFonts, mono)
+        dialog.setOption(QFontDialog.ProportionalFonts, proportional)
+        dialog.setWindowTitle('Select ' + title + ' for zoom level 0')
+        dialog.setCurrentFont(GlobalData().skin[settingName])
+
+        if dialog.exec_():
+            font = dialog.selectedFont()
+            if font.toString() != GlobalData().skin[settingName].toString():
+                return font
+        return None
+
+    def __onEditorFont(self):
+        """Select editor font"""
+        font = self.__selectFont(False, False, True, False,
+                                 'editor font', 'monoFont')
+        if font is not None:
+            GlobalData().skin.setTextMonoFont(font)
+            self.em.onTextZoomChanged()
+            self.onTextZoomChanged()
+
+    def __onEditorMarginFont(self):
+        """Select editor margin font"""
+        font = self.__selectFont(True, False, True, True,
+                                 'editor margin font', 'lineNumFont')
+        if font is not None:
+            GlobalData().skin.setMarginFont(font)
+            self.em.onTextZoomChanged()
+
+    def __onControlFlowFont(self):
+        """Select the control flow mono font"""
+        font = self.__selectFont(False, False, True, False,
+                                 'control flow mono font', 'cfMonoFont')
+        if font is not None:
+            GlobalData().skin.setFlowMonoFont(font)
+            self.em.onFlowZoomChanged()
+
+    def __onControlFlowBadgeFont(self):
+        """Select the control flow badge font"""
+        font = self.__selectFont(True, False, True, True,
+                                 'control flow badge font', 'badgeFont')
+        if font is not None:
+            GlobalData().skin.setFlowBadgeFont(font)
+            self.em.onFlowZoomChanged()
+
