@@ -51,7 +51,7 @@ from PyQt5.QtWidgets import (QApplication, QToolBar, QMenuBar, QLabel,
                              QGraphicsRectItem, QGraphicsPathItem, QSpinBox,
                              QGraphicsItem, QStyleOptionGraphicsItem,
                              QGraphicsView, QGraphicsTextItem, QDockWidget,
-                             QGraphicsPixmapItem, QColorDialog)
+                             QGraphicsPixmapItem, QColorDialog, QFontDialog)
 from PyQt5.QtNetwork import QTcpServer, QHostAddress, QAbstractSocket
 from PyQt5.QtSvg import QSvgGenerator, QGraphicsSvgItem
 from PyQt5.QtPrintSupport import QPrinter, QPrintDialog
