@@ -5,6 +5,7 @@
 * Plugin manager bug fixes and minor improvements
 * Graphics pane icon scaling in a uniform way
 * Slight changes for the graphics primitives with icons
+* Font selection dialogs for zoom level 0 instead of the font family selection
 
 2019 Oct 30 Sergey Satskiy <sergey.satskiy@tuta.io>
 
